--- a/OneWiki/data/Leeran.wiki
+++ b/OneWiki/data/Leeran.wiki
@@ -12,21 +12,22 @@ Leeran, who only ever appears at the shop in [Gorda] as an illusion.
             -[The Resignation of Kord] -10g
             -[Foresake the Gods] -50g    
             -[To Kill a Mocking Kenku] -20g      
-        X-Pearl of Power 300g - pg 184 DM
+        -Pearl of Power 300g - pg 184 DM
         -Etherium Ingot 200g 
         Gemstones 
             -10g to 500g valued ones
             -Obsidian Shard - 10g
-        X-Onyx Dog 300g - pg 170 DM
+            -Diamond Dust (worth 300g)
+        -Onyx Dog 300g - pg 170 DM
         -Sepentine Owl 250g - pg 170 DM
         -Fine Parchment - 1s per sheet
         -Blank spell books - 5g each      
-        X-Book of Understanding 400g - pg 209   
-        X-Sentient Rock (Henry)- 50g 10lb   
-        X-Rope of Climbing - 200g pg197
+        -Book of Understanding 400g - pg 209   
+        -Sentient Rock (Henry)- 50g 10lb   
+        -Rope of Climbing - 200g pg197
         -lvl 1 Wizard spells: all 100g each scroll
         -lvl 2 Wizard spells: all 200g each scroll
         -lvl 3 Wizard spells: all 300g each scroll
-        X-Undercommon crafting instructions for Sending Stones - 250g
+        -Undercommon crafting instructions for Sending Stones - 250g
         Quarterstaff Arcane Focus - 5g
         
