--- a/OneWiki/data/Materials.wiki
+++ b/OneWiki/data/Materials.wiki
@@ -9,3 +9,6 @@ Silver - uncommon
 Gold - rare
 Dimeritium - very rare, anti-magical properties - soft like hard butter greenish sheen
 Etherium - very rare, magical properties - very hard bluish sheen
+
+Gems and their crushed forms
+-gem dust value is worth 10% of it's original gem's value
