adding group three notes

--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -477,9 +477,4 @@ The group sails to [Dun Morhen] XX(6 days) on thier way to [Gorda]
 -[Croaker] anquires a dose of Wyvern poison
 -day 2, the group runs into 3 [Order of Steel] warships
     -8 Inquisitors, 8 brothers on each ship
-    -500ft
-    -350ft
-    -200ft
-    -50ft
-    
-Ended mid battle with inquisitors, refer to photo of battle.    
+    -Ended mid battle with inquisitors, refer to photo of battle.    
