--- a/OneWiki/data/Group Three Notes.wiki
+++ b/OneWiki/data/Group Three Notes.wiki
@@ -1,7 +1,7 @@
 ﻿++ Group Three Notes
 
 CALENDAR
-XXXXXXX  XXXXX
+XXXXXXX  XXXXXXX
 XXXXXXX
 XXXXXXX
 XXXXXXX
@@ -348,6 +348,7 @@ Marine HQ dock captain
  -is told supplies and personell are needed for hunting down [Rex The Smasher]
     -2 more privates
     -50lbs of food
+        -25 of fish, 25 of dried meat
  -notes down details for a new bounty for [Robert Culliford] 
     -stole money, terrorizing countryside of "Cassassafras" to the "south"
     -expells glass shards when struck
@@ -359,4 +360,30 @@ Marine HQ dock captain
 
 [Quinn] orders 200 arrows to be delivered to thier vessel by tomorrow
 
+++++Session 13
+[Quinn] and [Tessa]
+-5 marine private friends of Quinn convinced to join in the adventure
 
+[Plosive] goes to the actor's theatre and watches the tail end of Regdar the Selfless
+-gives 2 gold to a troubled beggar from [Arabasta] and gives a gold to 5 people nearby as well.
+
+[Quinn] and [Tessa] apply for the [Order of the Gauntlet]
+-Tessa writes down Evylin as her name for the application
+
+[Quinn] and [Tessa] convince Kaylin to also take the exame for the [Order of the Gauntlet]
+-Tessa doesn't quite pass in the sparing part of the examination
+-2 hours until Luth is ready for Quinn
+-Quinn does not pass the exam
+-1 hour until Kaylin's exam, but she chickens out due to Quinn and Tessa leaving the warehouse incapacitated.
+
+[Plosive] goes back to the ship and the rest of [Quinn]'s friends arrive
+-Plosive spars with the Greatsword wielder, Gerald
+
+The party rests for the night to allow Quinn to re-take the exam tomorrow. The privates go back to thier barracks to rest
+-Quinn - 10am
+    -passes on this day
+-Tessa - noon
+    -fails again
+-[Artin Torbera] - 2pm
+
+The group decides to travel to [Ak'Anon]
