--- a/OneWiki/data/Marines.wiki
+++ b/OneWiki/data/Marines.wiki
@@ -17,6 +17,7 @@ Admiral (leader of the organization)
 Vice Admirals (leaders of regions)
 Captains (leaders of vessels)
     [Bran C'Num] (half-orc) who oversees marine operations at the embassy in [Fiore]
+    [Luth] (human) uses spear [Order of the Gauntlet] examiner
 Officers (leaders of companies) former resident of [Gorda] - killed by the Evil group at the battle of the north dock of Fiore
     [Frank Nelson] (human) leads 5 marines stationed at [Augsburg]
     [Artin Torbera] (dwarf F) officer of the south gate of [Mayara] -killed by the Evil group at the battle of the north dock
