adding evil group notes

--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -478,3 +478,10 @@ The group sails to [Dun Morhen] XX(6 days) on thier way to [Gorda]
 -day 2, the group runs into 3 [Order of Steel] warships
     -8 Inquisitors, 8 brothers on each ship
     -Ended mid battle with inquisitors, refer to photo of battle.    
+    
+++++Session 31
+5 [Steel Inquisitor]s escape with 2 [Order of Steel] warships.
+-ships head back to [Luthadel]
+-group continues to [Dun Morhen] (4 more days) on thier way to [Gorda]
+    
+    
