--- a/OneWiki/OneWiki.wiki
+++ b/OneWiki/OneWiki.wiki
@@ -5,7 +5,7 @@ data_dir = data
 wikiwidehistory_maxentries = 100
 footnotes_as_wikiwords = False
 versioning_storagelocation = 0
-last_wiki_word = Evil Group Notes
+last_wiki_word = Lolth's Deck of Many Things
 hotkey_showhide_bywiki = 
 log_window_autoshow = Gray
 filestorage_identity_filenamemustmatch = False
@@ -28,7 +28,7 @@ wiki_lasttabssubctrls = textedit
 template_pagenamesre = ^template/
 tree_expandednodes_rememberduration = 2
 tabhistory_maxentries = 25
-tree_expandednodes_descriptorpathes_main = wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/The God Kings Palace;wikipage/OneWiki,wikipage/Dungeons,wikipage/The God Kings Palace;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar,wikipage/House Salazar Assassins;wikipage/OneWiki,wikipage/Towns,wikipage/Gorda,wikipage/Leeran;wikipage/OneWiki,wikipage/Characters,wikipage/Don Kreig,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Quinn;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of Steel,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Organizations;wikipage/OneWiki,wikipage/Towns,wikipage/Felwithe,wikipage/Oliander;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar;wikipage/OneWiki,wikipage/Dungeons;wikipage/OneWiki,wikipage/Characters,wikipage/Dun Morhen,wikipage/Roc Training Notebook;wikipage/OneWiki;wikipage/OneWiki,wikipage/Towns;wikipage/OneWiki,wikipage/Dungeons,wikipage/The God Kings Palace,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Players;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar,wikipage/House Salazar Assassins,wikipage/Kalas;wikipage/OneWiki,wikipage/Quests;wikipage/OneWiki,wikipage/Players,wikipage/Quinn;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Steel Inquisitor,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Krieger,wikipage/AkumaFruits
+tree_expandednodes_descriptorpathes_main = wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/The God Kings Palace;wikipage/OneWiki,wikipage/Gods,wikipage/Lolth,wikipage/Luthadel,wikipage/The God Kings Palace;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar,wikipage/House Salazar Assassins;wikipage/OneWiki,wikipage/Gods,wikipage/Lolth,wikipage/Luthadel;wikipage/OneWiki,wikipage/Towns,wikipage/Gorda,wikipage/Leeran;wikipage/OneWiki,wikipage/Characters,wikipage/Don Kreig,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Gods,wikipage/Lolth;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Order of the Gauntlet;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Quinn;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of Steel,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel;wikipage/OneWiki,wikipage/Towns,wikipage/Felwithe,wikipage/Oliander;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar;wikipage/OneWiki,wikipage/Characters,wikipage/Dun Morhen,wikipage/Roc Training Notebook;wikipage/OneWiki;wikipage/OneWiki,wikipage/Organizations,wikipage/Marines;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes;wikipage/OneWiki,wikipage/Items of Importance;wikipage/OneWiki,wikipage/AkumaFruits;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/Dallben the Vegetable;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes,wikipage/Marine HQ;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Leeran;wikipage/OneWiki,wikipage/Characters,wikipage/Luthadel,wikipage/House Salazar,wikipage/House Salazar Assassins,wikipage/Kalas;wikipage/OneWiki,wikipage/Quests;wikipage/OneWiki,wikipage/Players,wikipage/Quinn;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Steel Inquisitor,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Krieger,wikipage/AkumaFruits
 wiki_wikilanguage = wikidpad_default_2_0
 tree_force_scratchpad_visibility = True
 further_wiki_words = 
