--- a/OneWiki/data/Leeran.wiki
+++ b/OneWiki/data/Leeran.wiki
@@ -23,11 +23,11 @@ Leeran, who only ever appears at the shop in [Gorda] as an illusion.
         -Fine Parchment - 1s per sheet
         -Blank spell books - 5g each      
         -Book of Understanding 400g - pg 209   
-        -Sentient Rock (Henry)- 50g 10lb   
+        -[Sentient Rock Henry] - 50g 10lb   
         -Rope of Climbing - 200g pg197
         -lvl 1 Wizard spells: all 100g each scroll
         -lvl 2 Wizard spells: all 200g each scroll
         -lvl 3 Wizard spells: all 300g each scroll
-        -Undercommon crafting instructions for Sending Stones - 250g
+        -Undercommon crafting instructions for Sending Stones - 250g 
         Quarterstaff Arcane Focus - 5g
         
