--- a/OneWiki/data/Order of the Gauntlet.wiki
+++ b/OneWiki/data/Order of the Gauntlet.wiki
@@ -1,6 +1,11 @@
 ﻿++ Order of the Gauntlet
 
 A division of the marines whose members are strong individuals that choose to work solo instead of with a band of fellow [Marines]
-They are given the priviledge to wander as they see fit to take justice into their own hands, symbolized by a Gauntlet.
+
+Members are given the priviledge to wander as they see fit to take justice into their own hands, symbolized by a Gauntlet.
+-they may have meals at Marine outposts, embassys, and HQ
+-they may take advantage of any information or reports needed.
+-+1 Repor with all marines
+-free passage aboard Marine vessels
 
 [Letho]- Massive 7-foot tall man
