--- a/OneWiki/data/Gods.wiki
+++ b/OneWiki/data/Gods.wiki
@@ -1,6 +1,8 @@
 ﻿++ Gods
 (use Empyrean pg 130)
 
+(can grant Epic Boons (pg 232), +4 Trait Increases (can go above 20))
+
 [Tharizdun]
 [Pelor]
 [Melora]
@@ -14,3 +16,4 @@
 [Vecna]
 [Avandra]
 [Kadi]
+[Lolth]
