--- a/OneWiki/data/Golden Hand.wiki
+++ b/OneWiki/data/Golden Hand.wiki
@@ -1,3 +1,6 @@
 ﻿++ Golden Hand
 
+led by [Kyle Ro]
+use veteran
+
 A mercenary oganization that recently was hired to help with the escape of 50 refugees from [Luthadel]
