adding mage circles

--- a/OneWiki/data/Dun Morhen.wiki
+++ b/OneWiki/data/Dun Morhen.wiki
@@ -3,6 +3,7 @@
 https://www.youtube.com/watch?v=CpmAD4gcLMo
 
 This is a temperate forrested type of island that is rather large. It has no port towns, and it's residents tend to live self sustaining life styles. In the center of this island is the School of the Roc.
+Mage Teleportation Circle can be found and studied in the ruins.
 
 The School of the Roc is an ancient elven ruin inhabited by the students of the School of the Roc. Highly skilled warriors.
 
