--- a/OneWiki/data/Luthadel.wiki
+++ b/OneWiki/data/Luthadel.wiki
@@ -34,8 +34,11 @@ Temple of the [Order of Steel]
     -Skaa Temple North
     -Skaa Temple South
        -both have 8 [Steel Inquisitor]s and many Brothers from the Order of Steel
-[The God Kings Palace] (use associated dungeon map)
-[Dallben the Vegetable]'s house    
+
+-[The God Kings Palace] (use associated dungeon map)
+-[Dallben the Vegetable]'s house   
+-Concealed Back Alley Mage Teleportation Circle 
+
 Luthadel Black Market merchants:
   -Iggy, half-orc F (strong woman able to carry wares to sell)
      -Etherium Ingot - 400g (1 lb ingots)
@@ -43,6 +46,7 @@ Luthadel Black Market merchants:
      -Platinum - 600g (1 lb ingots)
   -[Emmik], old human, M (poor wizard that can summon loafs of bread)
   -[Quaal]'s Feather Tokens
+  -[Leeran] human, his shop is similarly located in a back alley that slopes down, a similar ward is in place, as well as permenant invisibility to any creature that has a hint of Iksar blood in them.
 
 There are several groups of criminal skaa in Luthadel, one such group had close ties with [Renegade Leader Kelsier] who in recent history made an escape from [Kunark] with about 50 refugee skaa. A smuggler, [Dockson] was responsible for getting in touch with the [Golden Hand] who helped turn the tide and allow their escape.
 Other members of this group include: (use DnD thug pg 350)
