--- a/data/Dallben the Vegetable.wiki
+++ b/data/Dallben the Vegetable.wiki
@@ -11,3 +11,11 @@ When spoken to, Dallben will look at people, and move his mouth at people, seein
 
 ++++Revived Dallben the Vegetable:
 Illusionist pg 214 of Volo's
+
+++++Dallben's hidden loot:
+Dust of Disappearance (pg 166)
+Dust of Sneezing and Choking (pg 166)
+Dust of Dryness (pg 166)
+Potion of Gaseous Form (pg 187)
+Rod of Alertness (pg 196)
+Cloak of Elvenkind (pg 158)
