--- a/data/Evil Group Notes.wiki
+++ b/data/Evil Group Notes.wiki
@@ -511,3 +511,7 @@ Long rest at [3 Helms Deep]
 [Tharizdun] ressurected in the throne room of , the party is awarded a point of inspiration
 -Tharizdun escapes to the Aybss
 
+++++Session 33
+Fruits begin growing on trees that don't grow fruit around [3 Helms Deep]
+Old man "Muu" ([Bahamut]) shows up to check if "everything is alright and if anyone needed help"
+
