--- a/data/Leeran.wiki
+++ b/data/Leeran.wiki
@@ -1,6 +1,8 @@
 ﻿++ Leeran
 
-Leeran, who only ever appears at the shop in [Gorda] as an illusion.
+Leeran, who only ever appears at the shops in [Gorda] and [Luthadel] as an illusionary projection.
+    his real body is buried 10ft under the floor of the shop in [Luthadel]
+     
 
         -god fruit - 6000g each (2 in stock in respective sized decorative metal boxes)
         -potions - weak 20g each 2d4+2
