--- a/data/Quaal.wiki
+++ b/data/Quaal.wiki
@@ -1,6 +1,6 @@
 ﻿++ Quaal
 
-Quaal is an underground mage who sells in [Luthadel], crafting various feather tokens.
+Quaal Human (F) is an underground mage who sells in [Luthadel], crafting various feather tokens.
 Willing to cut deals for customer's looking to meddle with [Venril Sathir]'s plans
 
 Feather Tokens (pg 188 DM)
