--- a/data/Luthadel.wiki
+++ b/data/Luthadel.wiki
@@ -45,7 +45,7 @@ Luthadel Black Market merchants:
      -Mithril Ingot - 200g (1 lb ingots)
      -Platinum - 600g (1 lb ingots)
   -[Emmik], old human, M (poor wizard that can summon loafs of bread)
-  -[Quaal]'s Feather Tokens
+  -[Quaal]'s Feather Tokens (Human, F)
   -[Leeran] human, his shop is similarly located in a back alley that slopes down, a similar ward is in place, as well as permenant invisibility to any creature that has a hint of Iksar blood in them.
 
 There are several groups of criminal skaa in Luthadel, one such group had close ties with [Renegade Leader Kelsier] who in recent history made an escape from [Kunark] with about 50 refugee skaa. A smuggler, [Dockson] was responsible for getting in touch with the [Golden Hand] who helped turn the tide and allow their escape.
