--- a/data/Quinn.wiki
+++ b/data/Quinn.wiki
@@ -5,6 +5,6 @@ friends with [Artin Torbera]
 Quinn's home barracks at [Marine HQ] is the west barracks
 -Sophia human F shortsword+shield
 -Gerald human M greatsword
--Scill goliath M longsword + shield
+-Scill goliath M longsword + shield - DEAD
 -Lars half orc M shortsword + shield
--Kaylin human F archer (best friend)
+-Kaylin human F archer (best friend) (longbow)
