--- a/data/Edan.wiki
+++ b/data/Edan.wiki
@@ -4,11 +4,14 @@ Human Fighter who is in a criminal network, with his main point of contact being
 
 He consumed the Iksar [AkumaFruits], which is triggered off of doing intelligent acts.
 
-Has achieved level 3 attunement to [Regdars Radiant Hilt]
+Has achieved level 5 attunement to [Regdars Radiant Hilt]
 
 Traits to be restored:
 -16 HP RESTORED
--17 HP
--17 HP
+-17 HP RESTORED
+-17 HP RESTORED
+-1 CON RESTORED
 -1 CON 
 -1 CON
+-10 HP
+-1 lvl 3 slot
