adding group three notes

--- a/data/Characters.wiki
+++ b/data/Characters.wiki
@@ -52,3 +52,9 @@ Legendary Heroes:
     [Taman]
     [Thrasher]
     [Nogg]
+    
+[Marine HQ]
+    [Eglath Kalagiano]
+    [Luth]
+    [Letho]
+        
