--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -1,13 +1,17 @@
 ﻿++ Group Three Notes
 
+SHIPS:
+-Reworked Keelboat from Nowa Huta
+    -Sophia, Lars, Kaylin, [Peiron] + 11 marines
+
 CALENDAR
 XXXXXXX  XXXXXXX
 XXXXXXX  XXXXXXX
 XXXXXXX  XXXXXXX
 XXXXXXX  XXXXXXX
 
-XXXXXXX  XX
-XXXXXXX
+XXXXXXX  XXXXXXX
+XXXXXXX  XXXXX
 XXXXXXX
 XXXXXXX
 
@@ -434,3 +438,53 @@ After Battle results (victory!):
 -[Tessa] begins to learn enchantment
 -the group arrives to Marine HQ
 
+++++Session 16
+[Quinn], [Tessa] and [Kyra] turn in [Rex The Smasher]'s head and collect 250g
+-50g to [Peiron]
+-30g to Scill's family
+-30g to all other marines that joined - Gerald, Sophia, Kaylin, Lars
+
+[Tessa] to attempt [Order of the Gauntlet] exam again at 6pm
+-passes her exam against Captain [Luth]
+
+--Long rest--
+
+[Tessa] turns in a approval letter for [Order of the Gauntlet] to thier office (result 19)
+
+[Kyra] requesting 15 [Marines] to join them to fight [Don Kreig]
+-including: Sophia, Kaylin, Lars, [Peiron], 11 names
+-do be ready in 2 days
+-375lb food 
+
+taking [Rex The Smasher]'s ship to [Fiore] with the main crew minus the [Marines]
+-[Quinn] will follow the day after the next with the extra contracted marines and food
+-4 days of travel XXXX
+
+At North Dock of [Fiore]
+-selling Rex the Smasher's ship, indimidates the inspector to give them a good price
+-2900g offered for Rex the Smasher's ship by dockmaster [Ghant]
+
+Heading to Mayara
+-ran into [Harris Flennre] and caused a conflict where Tessa knocked out Plosive, and troubles Vin with Wolfsbane
+-[Kyra] picks up the chainmail Bronze Barding for Vin from the Marine Embassy
+-[Plosive] 20g for sharpening from Shirrong Bronzecore, buys shield
+
+--Long Rest--
+
+Meeting [Letho]
+-recruited to join the party to take on [Don Kreig], meeting the party at the north dock
+
+[Kyra] gets sword sharpened
+
+--Long Rest--
+
+[Quinn] arrives with 15 marines at the north dock on Mayara
+-everyone gets on board and travels 4 days to [Arabasta] XXXX
+-9 vessels of [Don Kreig]'s men
+-5 marines have non-marine clothes - Kaylin
+-10 marines only have marine-issue recognizable gear - Pieron, Sophia, Lars
+-Posing [Peiron] as a marine prisoner
+
+[Tessa] leads 3 of [Don Kreig]'s men into a trap below deck where 10 marines then jump and apprehend them.
+
+ 
