--- a/data/Marines.wiki
+++ b/data/Marines.wiki
@@ -9,6 +9,9 @@ currently has bounties on
 		[Fiore] Griffin (50 Gold) Posted in Mayara by Ghan Bopps
 		The [Bandits of Deception] (200 Gold) Posted in Mayara by the Carpenter's guild
             -shows the faces of Vulcan, Edan, Croaker, Krieger
+        [Renegade Leader Kelsier] - 400g - DEAD - bounty offered by [House Zolis] (if alive)
+        [Taman] the Swindler - 30g - ALIVE (because he has the barkeep's money somewhere) -  bounty offered by barkeep at [Fiore] who was cheated in gambling 
+           
 
 
 +++Ranks:
